Fixing issue with share buttons on firefox and IE

--- a/views/css/modal-1.6.css
+++ b/views/css/modal-1.6.css
@@ -302,3 +302,9 @@
 	background: rgba(0, 0, 0, 0.25);
 }
 
+#froggypricenegociator-facebook-share-preload {
+	opacity:0;
+}
+#froggypricenegociator-twitter-share-preload {
+	opacity:0;
+}
